syntax = "proto3";

package access_manager;

option go_package = "/proto";

service AccessManager {
  rpc CreateTeam(CreateTeamRequest) returns (TeamResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message CreateTeamRequest {
  string name = 1;
  string username = 2;
  string password = 3;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  uint32 team_id = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message TeamResponse {
  bool success = 1;
  string message = 2;  
  uint32 id = 3;
  string name = 4;
}

message UserResponse {
  bool success = 1;
  string message = 2;  
  uint32 id = 3;
  string username = 4;
  uint32 team_id = 5;
}

message LoginResponse {
  bool success = 1;
  string message = 2;  
  string token = 3;  
}
